--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav a {
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
-  color: #bf963e;
+  color: #454372;
 }
 
 .social a {
@@ -49,7 +49,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #70877f;
+  color: rgb(240, 0, 120);
   border-bottom: solid 1px;
 }
 
@@ -71,16 +71,12 @@ nav li {
   flex: 1;
 }
 
-.fa-facebook-square {
-  color: #bf963e;
+.fa-facebook-square, .fa-instagram-square, .fa-twitter-square {
+  color: #454372;
 }
 
 .fa-facebook-square:hover {
   color: #3b5998;
-}
-
-.fa-instagram-square {
-  color: #bf963e;
 }
 
 .fa-instagram-square:hover {
@@ -88,10 +84,6 @@ nav li {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.fa-twitter-square {
-  color: #bf963e;
 }
 
 .fa-twitter-square:hover {
@@ -142,16 +134,15 @@ h2 {
   margin-right: -8px;
 }
 
-.poster {
+.posters {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: space-evenly;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin: 5% 10%;
 }
 
-.poster article {
+.posters article {
   display: flex;
 }
 
@@ -159,6 +150,41 @@ h2 {
   display: flex;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
+  position: absolute;
+  width: 460px;
+  height: 700px;
+  opacity: 0;
+}
+
+.poster:hover > .card {
+  transition: opacity ease-in-out 250ms;
+  opacity: 1;
+  background-color: rgba(236, 236, 236, 0.95);
+}
+
+.poster:hover > .card_moonlight {
+  width: 514px;
+}
+
+.poster:hover > .card_girl {
+  width: 476px;
+}
+
+.poster:hover > .card_haine {
+  width: 513px;
+}
+
+.poster:hover > .card_her {
+  width: 471px;
+}
+
+.poster:hover > .card_imitation {
+  width: 514px;
+}
+
+.poster:hover > .card_lobster, .card_melancholia {
+  width: 525px;
+  margin-right: 1%;
 }
 
 .card ul {
@@ -167,6 +193,10 @@ h2 {
 
 .card p, a, h3, h4 {
   margin-left: 30px;
+}
+
+.poster img {
+  box-shadow: 0 0 6px 1px rgb(131, 131, 131);
 }
 
 /* Newsletter & Reservation */
@@ -269,7 +299,7 @@ form label {
 }
 
 .map {
-  margin : 0 5% 0 0;
+  margin: 0 5% 0 0;
 }
 
 .phone {
