--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ header {
 }
 
 .logo p {
-  color: #bf963e;
+  /* color: #bf963e; */
+  color: rgb(240, 0, 120);
   margin: auto;
   margin-bottom: 5%;
   font-size: 1.5rem;
@@ -24,7 +25,8 @@ header {
 
 .fa-film {
   font-size: 5rem;
-  color: #bf963e;
+  /* color: #bf963e; */
+  color: rgb(240, 0, 120);
 }
 
 nav {
@@ -37,6 +39,19 @@ nav a {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
   color: #454372;
+  margin-left: 0;
+  margin-top: 4px;
+}
+
+nav a::after {
+  content: "";
+  background-color: rgb(240, 0, 120);
+  width: 100%;
+  height: 4px;
+  display: block;
+  position: relative;
+  top: 44px;
+  opacity: 0;
 }
 
 .social a {
@@ -50,7 +65,10 @@ nav a {
 
 nav a:hover {
   color: rgb(240, 0, 120);
-  border-bottom: solid 1px;
+}
+
+nav a:hover::after {
+  opacity: 1;
 }
 
 nav ul {
@@ -184,15 +202,15 @@ h2 {
 
 .poster:hover > .card_lobster, .card_melancholia {
   width: 525px;
-  margin-right: 1%;
 }
 
 .card ul {
   list-style-type: none;
 }
 
-.card p, a, h3, h4 {
-  margin-left: 30px;
+.card p, .card a, .card h3, .card h4, .card ul {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .poster img {
@@ -225,6 +243,10 @@ h2 {
 .button:hover {
   border: solid 1px rgb(240, 0, 120);
   box-shadow: 3px 3px 2px 1px rgb(240, 0, 120);
+}
+
+.dropdown_button {
+  display: none;
 }
 
 /* Forms */
@@ -360,5 +382,43 @@ footer a {
 
   to {
     text-shadow: 0 0 6px rgba(228, 206, 202, 0.98), 0 0 30px rgba(228, 209, 202, 0.42), 0 0 12px rgba(240, 0, 120, 0.58), 0 0 22px rgba(240, 0, 120, 0.84), 0 0 38px rgba(240, 0, 120, 0.88), 0 0 60px rgba(240, 0, 120, 1);
+  }
+}
+
+/* Media Queries */
+
+@media all and (max-width: 1439px) {
+  @-webkit-viewport {
+    width: device-width;
+  }
+  .posters {
+    flex-direction: column;
+  }
+  .poster {
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+  .social {
+    display: none;
+  }
+  nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 5%;
+    
+  }
+  .dropdown_content {
+    display: none;
+  }
+  .dropdown_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    border: none;
+  }
+  .fa-bars {
+    font-size: 3rem;
   }
 }
