Update CdC + refacto CSS

--- a/style.css
+++ b/style.css
@@ -196,7 +196,8 @@ h2 {
   width: 471px;
 }
 
-.poster:hover > .card_lobster, .card_melancholia {
+.poster:hover > .card_lobster,
+.card_melancholia {
   width: 525px;
 }
 
@@ -204,7 +205,11 @@ h2 {
   list-style-type: none;
 }
 
-.card p, .card a, .card h3, .card h4, .card ul {
+.card p,
+.card a,
+.card h3,
+.card h4,
+.card ul {
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -220,7 +225,8 @@ h2 {
   margin: 5% 0 5% 0;
 }
 
-.newsletter h2, .reservation h2 {
+.newsletter h2,
+.reservation h2 {
   margin-bottom: 55px;
 }
 
@@ -476,7 +482,9 @@ footer a {
     justify-content: space-around;
   }
 
-  .fa-facebook-square, .fa-instagram-square, .fa-twitter-square {
+  .fa-facebook-square,
+  .fa-instagram-square,
+  .fa-twitter-square {
     color: aliceblue;
   }
 }
@@ -514,7 +522,7 @@ footer a {
     max-height: 608.69px;
   }
 
-  .card_moonlight, 
+  .card_moonlight,
   .card_imitation {
     max-height: 544.73px;
   }
